# TMFVC

./: Assignment1.py  Assignment2.py  DisplayInstalledPackages.ipynb  README.md
Assignment 1/: Main.cpp  TMFVC_Ass01.ipynb  defaultvert.sec
Assignment 11/: TMFVC_Ass11.R
Assignment 12/: TMFVC_Ass12_1.R  TMFVC_Ass12_2.R  hand-washing.xlsx  ~$hand-washing.xlsx
Assignment 13/: vis_type.csv
Assignment 2/: TMFVC_Ass02.ipynb
Assignment 3/: Assignment3_1.py  TMFVC_Ass03.ipynb
Assignment 4/: TMFVC_Ass04.ipynb  shader.frag
Assignment 5/: TMFVC_Ass05.ipynb
Assignment 6/: TMFVC_Ass06.ipynb
Assignment 7/: NIKE_swoosh.ipynb  TMFVC_Ass07.ipynb
Assignment 8/: TMFVC_Ass08.ipynb
Assignment 9/: TMFVC_Ass09.ipynb
LearningR/: learn_script.R  test.R
OpenGL-tutorial/: BuffersUtil.h  CMakeLists.txt  Main.cpp  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  azure-pipelines.yml  default.frag  default.vert  glad.c
OpenGL-tutorial/OGL4Core-2/core/: Core.cpp
OpenGL-tutorial/OGL4Core-2/plugins/TMFVC/HeightField/: HeightField.cpp  HeightField.h
OpenGL-tutorial/OGL4Core-2/plugins/TMFVC/HeightField/resources/: shader.frag  shader.vert
OpenGL-tutorial/OGL4Core-2/plugins/TMFVC/HeightField/resources/terrain/: info.txt
OpenGL-tutorial/glad/: CMakeLists.txt
OpenGL-tutorial/glad/include/glad/: glad.h
OpenGL-tutorial/glfw/: CMakeLists.txt
OpenGL-tutorial/libs/glad/: CMakeLists.txt
OpenGL-tutorial/libs/glad/include/glad/: glad.h
OpenGL-tutorial/libs/glad/src/: glad.c
OpenGL-tutorial/stb_image/: CMakeLists.txt
